
2009-05-16 19:06 Ali aliov@xfce.org 
	 * : Open settings dialog when tray icon is clicked

2009-05-16 18:55 Ali aliov@xfce.org 
	 * : Reduce the settings dialog size

2009-05-16 17:00 Ali aliov@xfce.org 
	 * : Correct icons name for the settings dialog

2009-05-16 16:27 Ali aliov@xfce.org 
	 * : Change icons name so we don't conflict with gpm

2009-05-15 22:18 Ali aliov@xfce.org 
	 * : Handle system bus disconnection correctly+use no data in the tooltip when hal is not connected

2009-05-11 22:02 Ali aliov@xfce.org 
	 * : Added xfpm-debug.c with some code to debug GEnum values

2009-05-11  9:31 Ali aliov@xfce.org 
	 * : Update po Changelog for the russian translation

2009-05-11  9:30 Ali aliov@xfce.org 
	 * : Rusian translation added by Denis Koryavov

2009-05-05  0:26 Ali aliov@xfce.org 
	 * : Fix a crash in setting dialog caused by the previous commit when wrong data is passed to g_signal_connect

2009-05-05  0:14 Ali aliov@xfce.org 
	 * : Making xfpm compiles with the new compiler flags added by Brian

2009-05-02 12:55 Ali aliov@xfce.org 
	 * : Add workaround for some strange battery change state

2009-05-02 12:43 Ali aliov@xfce.org 
	 * : Fix GLib warning when no laptop_panel found in the system

2009-05-02 10:27 Ali aliov@xfce.org 
	 * : Fix a compile warning

2009-05-01  9:52 Ali aliov@xfce.org 
	 * : Fix compile issue bug#5321

2009-04-28 11:58 Ali aliov@xfce.org 
	 * : Update pot file+readd version tag

2009-04-28 11:53 Ali aliov@xfce.org 
	 * : Prepare RC1 release

2009-04-22  9:52 Ali aliov@xfce.org 
	 * : Enable set hal power save

2009-04-20 10:24 Ali aliov@xfce.org 
	 * : Provide the possibility to disable CPU freq control+don't compile the cpu governor code if we aren't on Linux

2009-04-20  9:22 Ali aliov@xfce.org 
	 * : Remove all encoding keys from the desktop file thanks to Yves for pointing out

2009-04-19 12:57 Ali aliov@xfce.org 
	 * : Fix brightness level settings issue on ibook

2009-04-15  9:41 Ali aliov@xfce.org 