@@ -1,4 +1,7 @@
 
+2009-05-16 19:37 Ali aliov@xfce.org 
+	 * : Handle wrong battery information data
+
 2009-05-16 19:06 Ali aliov@xfce.org 
 	 * : Open settings dialog when tray icon is clicked
 
